
HOW TO UPDATE?

- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.3.6 WIP
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.6

- ImPlot: upgraded to commit 4f0a09f

-----------------------------------------------------------------------
 VERSION 0.3.5 (9/10/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.5

New Commands:
- Menu Item: added "check" and "shortcut" keywords #186
- Widgets:   added "is_item_container" #203
- Widgets:   added "get_item_parent" #203
- Widgets:   added "is_item_shown" #203

Fixes:
- Other: Fixed get_window_pos for built-in windows #202
- Other: Fixed get_window_width/height for built-in windows #202

-----------------------------------------------------------------------
 VERSION 0.3.4 (9/9/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.4

New Commands:
- Widgets: Added "add_dummy"

Fixes:
- Colors: Fixed crash when adding a color more than 4 items long
- Window: fixed window changing position while autosizing #196


-----------------------------------------------------------------------
 VERSION 0.3.1 (9/7/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.1

Breaking Changes:

- Callbacks: All callbacks are now callables (not strings)
- Separator: Changed "add_seperator" to "add_separator" #188

Changes:
- Widgets: Changed "add_item_color style" to "set_item_color"

New Commands:
- Widgets: Added "clear_item_color"
- App:     Added "set_start_callback" #187
